--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,36 @@
   </head>
   <body>
 
-    <h1>Hello World!</h1>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Contact Information</h2>
+
+          <div class="contact-input">
+
+            <!-- <form action="">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Email" aria-describedby="sizing-addon2">
+              </div>
+
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Full Name" aria-describedby="sizing-addon2">
+              </div>
+
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Phone Number" aria-describedby="sizing-addon2">
+              </div>
+
+              <input type="submit" name="submit" value="Submit" />
+            </form> -->
+
+            <!-- APPEND CONTACT_LIST_FORM -->
+
+          </div>
+
+        </div>
+      </div>
+    </div>
 
     <script src="js/bundle.js"></script>
   </body>
